# ubuntu_software_engineering_server

./: CMakeLists.txt  README
src/message/: Message.h
src/message/const_value/: Message_Type.h
src/message/src/: Load_msg.cpp  Load_msg.h  Message.cpp  Message.h
src/message_model/const_value/: Message_Type.h
src/message_model/message/: Cancelation.cpp  Cancelation.h  Load.cpp  Load.h  Message.cpp  Message.h  Message_CS.h  Message_handler.cpp  Message_handler.h  Req_Friends.h
src/support/handy/examples/: codec-cli.cc  codec-svr.cc
src/support/handy/handy/: codec.cc  codec.h
src/tools/: Const_Values.h  Define_Member.h  json_serialize_deserialize.h
src/tools/json/: json_serialize_deserialize.cpp  json_serialize_deserialize.h
test/: random_test.cpp
test/message/: test_message.cpp
test/tools/json/: test_json.cpp
